# wpsr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRLOG.md  README.md  release.toml  renovate.json  sonar-project.properties  wspr.toml
.circleci/: config.yml  release.yml  update_prlog.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/slb/: Cargo.toml
crates/slb-cli/: Cargo.toml
crates/slb-cli/src/: cli.rs  lib.rs  main.rs
crates/slb-cli/src/cli/: solutions.rs  solve.rs
crates/slb-cli/tests/cmd/: help.trycmd  run.trycmd  version.trycmd
crates/slb/src/: letters_boxed.rs  lib.rs
crates/slb/src/letters_boxed/: shuffle.rs
crates/wpsr/: Cargo.toml  release-hook.sh  release.toml
crates/wpsr/src/: anagram.rs  boxed.rs  cli.rs  lib.rs  main.rs  words.rs
crates/wpsr/src/boxed/: shape.rs  solution.rs
crates/wpsr/src/boxed/solution/: letters_boxed.rs
crates/wpsr/src/boxed/solution/letters_boxed/: shuffle.rs
crates/wpsr/src/cli/: anagram.rs  boxed.rs  list.rs  words.rs
crates/wpsr/src/cli/boxed/: generate.rs  prepare.rs  solutions.rs
crates/wpsr/tests/: cli_tests.rs
crates/wpsr/tests/cmd/: help.trycmd  version.trycmd
docs/: slb.toml
src/: anagram.rs  cli.rs  error.rs  letters_boxed.rs  lib.rs  main.rs  prepare_words.rs  shape.rs  solution.rs  word_filters.rs  words.rs
src/boxed/: mod.rs  solution.rs
src/boxed/solution/: letters_boxed.rs
src/cli/: alpha.rs  anagram.rs  generate.rs  list.rs  prepare.rs  solutions.rs  solve.rs  words.rs
src/cli/boxed/: generate.rs  prepare.rs  solve.rs
src/letters_boxed/: edge.rs  weighted_word.rs
tests/cmd/: generate.trycmd  help.trycmd  run.trycmd  version.trycmd
word-originals/: bestwordlist.txt  mit_words.txt
words/: bestwordlist.slb  bestwordlist.txt  default.slb  default.txt  mit_words.slb  out.txt
