[workspace]
members = ["crates/wpsr"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.85"
repository = "https://github.com/jerus-org/wpsr"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colorful = "0.3.2"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
indicatif = "0.18.3"
log = "0.4.29"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"] }
trycmd = "0.15.11"

[workspace.lints.clippy]
uninlined-format-args = "warn"
