[package]
name = "app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]
name = "sbl_droid_app"

[dependencies]
uniffi = { version = "0.29.1", features = ["cli"] }
